--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -163,7 +163,7 @@
             color: var(--secondary-color);
             text-decoration: underline;
         }
-
+        
         .footer {
             margin-top: 2rem;
             color: #8e8e8e;
@@ -219,7 +219,7 @@
     </div>
 
     <div class="register-container">
-        <p class="register-link">Don't have an account? <a href="">Sign up</a></p>
+        <p class="register-link">Don't have an account? <a href="/register">Sign up</a></p>
     </div>
 
     <footer class="footer">
