User Login, Logout and Home page Done

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -214,7 +214,7 @@
     </div>
 
     <div class="login-container">
-        <form action="" method="POST">
+        <form action="/login" method="POST">
             <div class="form-group">
                 <input type="text" id="username" name="username" placeholder="Username" required autocomplete="username">
             </div>
